--- a/roles/app.old/tasks/main.yml
+++ b/roles/app.old/tasks/main.yml
@@ -1,5 +1,4 @@
 - name: Install needed packages
-  tags: app, setup, prerequisites
   ansible.builtin.package:
     name:
       - git
@@ -13,55 +12,75 @@
     global: true
     state: present
 
+- name: Debug temp
+  ansible.builtin.debug:
+    var: groups['exploringAgents'] | regex_search(ansible_hostname) is not none
+
 - name: Set application modules to deploy
   ansible.builtin.set_fact:
     app_modules:
-      explorer: true
-      watcher: false
+      explorer: "{{ 'exploringAgents' in group_names }}"
+      watcher: "{{ 'watchingAgents' in group_names }}"
 
 - name: Debug detected modules
   ansible.builtin.debug:
     var: app_modules
 
-- name: Initialize agents_dict as an empty dictionary
-  ansible.builtin.set_fact:
-    exploring_agents_dict: {}
+- name: Include module variables
+  ansible.builtin.include_vars:
+    file: "vars/{{ item }}.yml"
+  with_items: "{{ app_modules | dict2items | selectattr('value', 'equalto', true) | map(attribute='key') | list }}"
 
-- name: Append each host's IP to exploring_agents_dict with "agentN"
-  ansible.builtin.set_fact:
-    exploring_agents_dict: "{{ exploring_agents_dict | combine({ hostvars[item].ansible_host: 'agent' + '%03d' | format(item_index + 1) }) }}"
-  with_items: "{{ groups['all'] }}"
-  loop_control:
-    index_var: item_index  # Provides the index of the current item in the loop
-
-- name: Display exploring_agents_dict
+- name: Test variables loaded
   ansible.builtin.debug:
-    var: exploring_agents_dict
+    var: app_modules
 
-- name: Set app_agent_name based on exploring_agents_dict content
+- name: Get /etc/hosts content to find agent's name
+  ansible.builtin.slurp:
+    src: /etc/hosts
+  register: hosts_file_result
+
+- name: Set hosts_file as fact
   ansible.builtin.set_fact:
-    app_agent_name: "{{ exploring_agents_dict[ansible_default_ipv4.address] }}"
+    hosts_file: "{{ hosts_file_result.content | b64decode }}"
+
+- name: debug hosts_file
+  ansible.builtin.debug:
+    var: hosts_file
+
+- name: Debug default_ipv4 address
+  ansible.builtin.debug:
+    msg: "Default IPv4 address is {{ ansible_default_ipv4.address }}"
+
+- name: Set app_agent_name based on /etc/hosts content
+  ansible.builtin.set_fact:
+    app_agent_name: "{{ hosts_file | split('\n') | select('search', ansible_default_ipv4.address) | first | regex_search('agent[0-9]{3}') | default('') }}"
   when: app_modules.explorer | default(false)
   failed_when: app_agent_name == ''
-
-- name: Set app_watcher_name fact
-  ansible.builtin.set_fact:
-    app_watcher_name: "Watcher"
-  when: app_modules.watcher | default(false)
-  failed_when: app_watcher_name == ''
 
 - name: Debug app_agent_name fact
   ansible.builtin.debug:
     var: app_agent_name
   when: app_modules.explorer | default(false)
 
-- name: Set app_explorers_ips fact
+- name: Set app_watcher_name and watcher_ip based on /etc/hosts content
   ansible.builtin.set_fact:
-    app_explorers_ips: "{{ exploring_agents_dict.keys() | list }}"
+    app_watcher_name: "{{ hosts_file | split('\n') | select('search', ansible_default_ipv4.address) | first | regex_search('watcher[0-9]{3}') | default('') }}"
+  when: app_modules.watcher | default(false)
+  failed_when: app_watcher_name == ''
 
-- name: Debug app_explorers_ips fact
+- name: Debug app_watcher_name fact
   ansible.builtin.debug:
-    var: app_explorers_ips
+    var: app_watcher_name
+  when: app_modules.watcher | default(false)
+
+- name: Set app_explorers_names fact
+  ansible.builtin.set_fact:
+    app_explorers_names: "{{ hosts_file | regex_findall('agent[0-9]{3}', multiline=True, ignorecase=True) }}"
+
+- name: Debug app_explorers_names fact
+  ansible.builtin.debug:
+    var: app_explorers_names
 
 - name: Set environnment variables for explorers/watchers
   tags: app, env, explorer, watcher
@@ -80,10 +99,10 @@
       AGENT_NAME: "{{ app_agent_name | default(omit) }}"
       WATCHER_NAME: "{{ app_watcher_name | default(omit) }}"
       BACKEND_SERVICES: >-
-        {{ app_explorers_ips | join(':' + app_base_port | string + ',') + ':' + app_base_port | string
-        if (app_modules.watcher | default(false) and app_explorers_ips | length > 0) else omit }}
+        {{ app_explorers_names | join(':' + app_base_port | string + ',') + ':' + app_base_port | string
+        if (app_modules.watcher | default(false) and app_explorers_names | length > 0) else omit }}
       REPL_MONGO_URI: >-
-       mongodb://{{ app_explorers_ips | join(':' + app_base_mongo_port | string + ',') + ':' + app_base_mongo_port | string }}/
+       mongodb://{{ app_explorers_names | join(':' + app_base_mongo_port | string + ',') + ':' + app_base_mongo_port | string }}/
        {{ app_db_name }}?replicaSet={{ app_mongo_replica_set_name }}
       DB_NAME: "{{ app_db_name }}"
 
@@ -104,22 +123,12 @@
     - ExplorationToyProblem-Backend
     - ExplorationToyProblem-LocalFront
     - ExplorationToyProblem-GlobalFront
-  become_user: "{{ ansible_user }}"
 
 - name: Ensure loginctl user-session exists
   ansible.builtin.command:
     # cmd: "loginctl enable-linger {{ ansible_user }}"
-    cmd: "loginctl enable-linger {{ ansible_user }}"
+    cmd: "loginctl enable-linger"
     creates: "/var/lib/systemd/linger/{{ ansible_user }}"
-  become_user: "{{ ansible_user }}"
-
-- name: Create all the intermediates subdirectories for systemd user services
-  ansible.builtin.file:
-    path: "~/.config/systemd/user"
-    state: directory
-    mode: '0755'
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
 
 - name: Deploy explorer module
   tags: app, deploy, explorer
