--- a/playbooks/debug_ips_with_name.yml
+++ b/playbooks/debug_ips_with_name.yml
@@ -5,15 +5,15 @@
   tasks:
     - name: Initialize agents_dict as an empty dictionary
       ansible.builtin.set_fact:
-        db_nodes: []
+        agents_dict: {}
 
     - name: Append each host's IP to agents_dict with "agentN"
       ansible.builtin.set_fact:
-        db_nodes: "{{ db_nodes + [hostvars[item].ansible_host] }}"
+        agents_dict: "{{ agents_dict | combine({ hostvars[item].ansible_host: 'agent' + '%03d' | format(item_index + 1) }) }}"
       with_items: "{{ groups['all'] }}"
       loop_control:
-        index_var: item_index
+        index_var: item_index  # Provides the index of the current item in the loop
 
-    - name: Display db_nodes
+    - name: Display agents_dict
       ansible.builtin.debug:
-        var: db_nodes
+        var: agents_dict
