--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -14,16 +14,12 @@
       - "Distribution: {{ os_distribution }}"
       - "Version: {{ os_version }}"
 
-- name: Debug /etc/hosts content for MongoDB nodes
-  tags: db, install, config
-  ansible.builtin.slurp:
-    src: /etc/hosts
-  register: hosts_file
-
-- name: Define nodes for replication
-  tags: db, install, config
+- name: Append each host's IP to agents_dict with "agentN"
   ansible.builtin.set_fact:
-    db_nodes: "{{ hosts_file.content | b64decode | regex_findall('agent[0-9]{3}', multiline=True, ignorecase=True) | default([]) }}"
+    db_nodes: "{{ db_nodes | default([]) + [hostvars[item].ansible_host] }}"
+  with_items: "{{ groups['all'] }}"
+  loop_control:
+    index_var: item_index
   failed_when: db_nodes | length == 0
 
 - name: Debug db_nodes fact
