--- a/configure_app.yml
+++ b/configure_app.yml
@@ -1,7 +1,9 @@
 ---
 - name: Role test playbook
   hosts: all
-  become_user: "{{ ansible_user }}"
+  become: true
+  become_user: root
+  # become_user: "{{ ansible_user }}"
   gather_facts: true
   roles:
     - role: app
